test/classes/initializers/constInHeader.good
constInHeader.chpl:4: In initializer:
constInHeader.chpl:4: error: invalid access of class member in initializer argument list
